@@ -6,7 +6,7 @@
 {% block chosen_state_view %}
     <div class="preview-image">
         {% if image %}
-            {% image image max-165x165 class="show-transparency" %}
+            {% image image max-165x165 class="show-transparency" title=image.title %}
         {% else %}
             <img>
         {% endif %}
